fix: changed registration endpoint to return the user and a bearer-token
